added handling for edge cases of same positions